@@ -1,6 +1,8 @@
 Change Log for OpenXava project
 ===============================
 
+- Fix: The files welcome.jsp and firstSteps.jsp overwritten when deployWar or updateOX.
+- Fix: Controller in controladores.xml with contexto=web sometimes does not show the actions.
 - Fix: Combo handle for @DescriptionsList is displaced inside a dialog when it is narrowed.
 - Fix: Moving with the cursor in a @DescriptionsList combo shows the key in the textfield instead of description.
 - Fix: Required and error icon displaced in Android tablets and iPad.
